# CausalFast

./: CausalTheory.md  LICENSE  PGA-data.md  README.md  Titanic-data.md
api/: CausalFastAPI.py  PGA.md  __init__.py  pyproject.toml
api/data/: Titanic-Propensity-Score-Matches.csv  titanic.csv
api/notebooks/: CausalDAGMaker.ipynb  EstimandTutorials.ipynb  PGA-InferenceAndEstimation.ipynb  Titanic-PropensityScoreMatching-ATT.ipynb  Titanic.ipynb
guides/: CF-API-Specifications.md  CausalTheory.md  PGA.md  Titanic.md
