[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "causalfast"
version = "0.2.9"
description = "An API for running DoWhy simulations"
readme = "README.md"
authors = [{ name = "TejuOye", email = "nsmc11@protonmail.com" }]
license = { file = "LICENSE" }
repository = "https://github.com/TejuOye/CausalFast"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["DoWhy", "API", "causality", "statistics", "DAG"]
dependencies = ["dowhy==0.9.1"]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/TejuOye/CausalFast"

